@@ -1,3 +1,9 @@
+
+2018-08-04  Janus Weil  <janus@gcc.gnu.org>
+
+	PR fortran/45521
+	* gfortran.dg/interface_assignment_6.f90: New test case.
+
 2018-08-04  Uros Bizjak  <ubizjak@gmail.com>
 
 	PR testsuite/86153
