@@ -1,3 +1,9 @@
+2018-08-04  Janus Weil  <janus@gcc.gnu.org>
+
+	PR fortran/45521
+	* interface.c (gfc_compare_interfaces): Apply additional
+	distinguishability criteria of F08 to operator interfaces.
+
 2018-07-31  Andre Vieira  <andre.simoesdiasvieira@arm.com>
 
 	Revert 'AsyncI/O patch committed'
